# parity-monitor

./: CONTRIBUTING.md  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
examples/: backtest.csv  live.csv
src/parity_monitor/: classifier.py  cli.py  matcher.py  pipeline.py  report.py  schema.py
tests/: test_classifier.py  test_cli.py  test_matcher.py  test_pipeline.py  test_report.py  test_schema.py
