[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parity-monitor"
version = "0.1.0"
description = "Compare a backtest replay log against a live trading log and diagnose where they diverge."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
parity-monitor = "parity_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
